# partita-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_bot.py  wsgi.py
.github/: CONTRIBUTING.md
.github/workflows/: docker-publish.yml
partita_bot/: __init__.py  admin.py  admin_operations.py  bot.py  bot_manager.py  config.py  custom_bot.py  event_fetcher.py  notifications.py  rich_text.py  scheduler.py  storage.py
substrate/traces/operations/: 2026-03-02-exa-answer-refactor.md  2026-03-02-quality-hardening-pass.md  2026-03-03-cache-revalidation-for-legacy-event-dates.md  2026-03-03-package-reorg-and-parma-validation.md  2026-03-03-strict-event-date-filtering.md  2026-03-04-compose-env-defaults.md  2026-03-04-exa-search-grounded-events-and-links.md  2026-03-04-global-bot-language-for-search-prompts.md  2026-03-04-morning-scheduler-same-day-interval-fix.md  2026-03-04-onboarding-multi-city-fix.md  2026-03-04-whitelist-pending-requests.md  2026-03-06-admin-notify-backend-refactor.md  2026-03-06-football-data-exa-integration.md  (+5 more)
templates/: admin.html
tests/: conftest.py  test_admin.py  test_bot_entrypoints.py  test_bot_handlers.py  test_bot_manager.py  test_bot_module.py  test_city_classification.py  test_config.py  test_custom_bot.py  test_event_fetcher.py  test_notifications_multicity.py  test_resiliency.py  test_rich_text.py  test_run_bot_helpers.py  test_scheduler.py  test_scheduler_module.py  test_storage_cache.py  test_storage_methods.py  test_wsgi.py
(+23 files in other folders)
